--- a/Fajar-UAS-Desktop-2019/src/fajar/uas/desktop/pkg2019/HasilTransaksi.form
+++ b/Fajar-UAS-Desktop-2019/src/fajar/uas/desktop/pkg2019/HasilTransaksi.form
@@ -166,7 +166,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="barang1">
           <Properties>
-            <Property name="text" type="java.lang.String" value=" "/>
+            <Property name="text" type="java.lang.String" value="= "/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -174,7 +174,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="tanggal1">
           <Properties>
-            <Property name="text" type="java.lang.String" value=" "/>
+            <Property name="text" type="java.lang.String" value="= "/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -182,7 +182,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="harga1">
           <Properties>
-            <Property name="text" type="java.lang.String" value=" "/>
+            <Property name="text" type="java.lang.String" value="= "/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -190,7 +190,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jumlah1">
           <Properties>
-            <Property name="text" type="java.lang.String" value=" "/>
+            <Property name="text" type="java.lang.String" value="= "/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -198,7 +198,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="total1">
           <Properties>
-            <Property name="text" type="java.lang.String" value=" "/>
+            <Property name="text" type="java.lang.String" value="= "/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
